--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,113 @@
-anyio==3.6.2
-asgiref==3.5.2
-beautifulsoup4==4.11.1
-block==0.0.5
-bootstrap4==0.1.0
-certifi==2022.9.24
-charset-normalizer==2.1.1
-checkout==0.2.0
-distlib==0.3.6
-Django==4.1.7
-django-bootstrap4==22.3
-django-filter==22.1
+aiohttp==3.8.4
+aiosignal==1.3.1
+ajax==3.0.0
+api==0.0.7
+appier==1.31.2
+asgiref==3.6.0
+async-timeout==4.0.2
+attrs==23.1.0
+beautifulsoup4==4.12.2
+cachetools==5.3.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
+Choco==1.0.5
+clear-cache==1.0.0
+colorama==0.4.6
+comtypes==1.2.0
+contourpy==1.0.7
+cycler==0.11.0
+decorator==5.1.1
+decouple==0.0.7
+dependencies==7.7.0
+distlib==0.3.7
+Django==4.2.4
+django-appconf==1.0.5
+django-bootstrap4==23.1
+django-cors-headers==4.2.0
+django-filter==23.1
+django-google-maps==0.13.0
+django-rest-framework==0.1.0
 djangorestframework==3.14.0
-docopt==0.6.2
-fastapi==0.94.0
-filelock==3.8.0
-gunicorn==20.1.0
+djangorestframework-gis==1.0
+export==0.2.0
+filelock==3.12.2
+fonttools==4.39.4
+frozenlist==1.3.3
+future==0.18.3
+geographiclib==2.0
+geopy==2.3.0
+google==3.0.0
+google-api==0.1.12
+google-api-core==2.11.0
+google-api-python-client==2.88.0
+google-auth==2.19.1
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
+googleapis-common-protos==1.59.1
+googlemaps==4.10.0
+greenlet==2.0.2
+httplib2==0.22.0
+humanfriendly==10.0
 idna==3.4
-Markdown==3.4.1
-numpy==1.24.2
-pandas==1.5.3
-Pillow==9.3.0
-pipreqs==0.4.11
-platformdirs==2.5.4
-psycopg2==2.9.5
-pydantic==1.10.6
-pystache==0.6.0
+key==0.4
+kiwisolver==1.4.4
+Markdown==3.4.4
+MarkupSafe==2.1.3
+matplotlib==3.7.1
+multidict==6.0.4
+mysql-connector-python==8.0.33
+nose==1.3.7
+numpy==1.24.3
+oauthlib==3.2.2
+openai==0.27.7
+optional-django==0.3.0
+osmapi==3.1.0
+packaging==23.1
+pandas==2.0.1
+pathlib==1.0.1
+Pillow==9.5.0
+pipenv==2023.8.26
+platformdirs==3.10.0
+protobuf==3.20.3
+psycopg==3.1.10
+psycopg2==2.9.7
+psycopg2-binary==2.9.6
+pyarrow==12.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+PyAudio==0.2.13
+pylance==0.4.20
+pyparsing==3.0.9
+pypiwin32==223
+pyreadline3==3.4.1
 python-dateutil==2.8.2
-pytz==2022.6
-requests==2.28.1
+python-decouple==3.8
+pyttsx3==2.90
+pytz==2023.3
+pywin32==306
+pyzmq==25.1.1
+react==4.3.0
+requests==2.31.0
+requests-oauthlib==1.3.1
+reverse==0.1.0
+router==0.1
+routers==0.10.1
+rsa==4.9
+scipy==1.10.1
+scoop==0.7.2.0
+Serializer==0.2.1
+serializers==0.2.4
+simplejson==3.19.1
 six==1.16.0
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-sqlparse==0.4.3
-starlette==0.26.0.post1
-static==1.1.1
-typing_extensions==4.5.0
-tzdata==2022.6
-urllib3==1.26.13
-virtualenv==20.20.0
-yarg==0.1.9
+soupsieve==2.4.1
+SpeechRecognition==3.10.0
+sqlparse==0.4.4
+tqdm==4.65.0
+typing_extensions==4.7.1
+tzdata==2023.3
+uritemplate==4.1.1
+urllib3==1.26.16
+virtualenv==20.24.3
+virtualenv-clone==0.5.7
+wget==3.2
+yarl==1.9.2
