--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,8 @@ packaging==23.1
 pandas==2.0.1
 pathlib==1.0.1
 Pillow==9.5.0
-pipenv==23.3.1
+pip==23.3.1
+pipenv==2023.8.26
 platformdirs==3.10.0
 protobuf==3.20.3
 psycopg==3.1.10
@@ -80,6 +81,7 @@ pylance==0.4.20
 pyparsing==3.0.9
 pypiwin32==223
 pyreadline3==3.4.1
+python==3.11.5
 python-dateutil==2.8.2
 python-decouple==3.8
 pyttsx3==2.90
