--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ packaging==23.1
 pandas==2.0.1
 pathlib==1.0.1
 Pillow==9.5.0
+pip==23.3.1
 pipenv==2023.8.26
 platformdirs==3.10.0
 protobuf==3.20.3
