--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ asgiref = "==3.6.0"
 async-timeout = "==4.0.2"
 attrs = "==23.1.0"
 beautifulsoup4 = "==4.12.2"
+bs4 = "*"
 cachetools = "==5.3.1"
 certifi = "==2023.5.7"
 charset-normalizer = "==3.1.0"
@@ -26,7 +27,7 @@ decorator = "==5.1.1"
 decouple = "==0.0.7"
 dependencies = "==7.7.0"
 distlib = "==0.3.7"
-django = "==4.2.4"
+django = "*"
 django-appconf = "==1.0.5"
 django-bootstrap4 = "==23.1"
 django-cors-headers = "==4.2.0"
@@ -52,6 +53,7 @@ google-auth-oauthlib = "==1.0.0"
 googleapis-common-protos = "==1.59.1"
 googlemaps = "==4.10.0"
 greenlet = "==2.0.2"
+gunicorn = "*"
 httplib2 = "==0.22.0"
 humanfriendly = "==10.0"
 idna = "==3.4"
@@ -93,7 +95,7 @@ pytz = "==2023.3"
 pywin32 = "==306"
 pyzmq = "==25.1.1"
 react = "==4.3.0"
-requests = "==2.31.0"
+requests = "*"
 requests-oauthlib = "==1.3.1"
 reverse = "==0.1.0"
 router = "==0.1"
@@ -115,10 +117,14 @@ uritemplate = "==4.1.1"
 urllib3 = "==1.26.16"
 virtualenv = "==20.24.3"
 virtualenv-clone = "==0.5.7"
+whitenoise = "*"
 wget = "==3.2"
 yarl = "==1.9.2"
 
+
 [dev-packages]
+autopop8 = "*"
+
 
 [requires]
 python_version = "3.11"
