--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,8 @@ pyarrow==14.0.1
 PyAudio==0.2.14
 pylance==0.8.17
 pypiwin32==223
+python==3.11.5
+PYTHON_VERSION==3.11.5
 python-dateutil==2.8.2
 python-decouple==3.8
 pyttsx3==2.90
