--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ distlib==0.3.7
 Django==4.2.7
 django-bootstrap4==23.2
 django-filter==23.4
+django-html==0.1.0
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
 filelock==3.13.1
