--- a/Pipfile
+++ b/Pipfile
@@ -32,6 +32,7 @@ pyarrow==14.0.1
 PyAudio==0.2.14
 pylance==0.8.17
 pypiwin32==223
+python==3.11.5
 python-dateutil==2.8.2
 python-decouple==3.8
 pyttsx3==2.90
@@ -55,6 +56,7 @@ wget==3.2
 
 
 [dev-packages]
+
 autopop8 = "*"
 
 
