--- a/requirements.txt
+++ b/requirements.txt
@@ -3,31 +3,47 @@ beautifulsoup4==4.12.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 comtypes==1.2.0
+contourpy==1.2.0
+cycler==0.12.1
 distlib==0.3.7
 Django==4.2.7
+django-appconf==1.0.6
 django-bootstrap4==23.2
+django-cors-headers==4.3.1
 django-filter==23.4
+django-google-maps==0.13.0
 django-html==0.1.0
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
+djangorestframework-gis==1.0
 filelock==3.13.1
+fonttools==4.45.1
 future==0.18.3
+greenlet==3.0.1
 gunicorn==21.2.0
+httplib2==0.22.0
 idna==3.6
+kiwisolver==1.4.5
+matplotlib==3.8.2
+multidict==6.0.4
 numpy==1.26.2
+oauthlib==3.2.2
 packaging==23.2
 pandas==2.1.3
 pathlib==1.0.1
 Pillow==10.1.0
+pip==23.3.1
 pipenv==2023.11.15
 pipfile==0.0.2
 platformdirs==4.0.0
+psycopg==3.1.13
 pyarrow==14.0.1
+pyasn1==0.5.1
 PyAudio==0.2.14
 pylance==0.8.17
+pyparsing==3.1.1
 pypiwin32==223
 python==3.11.5
-PYTHON_VERSION==3.11.5
 python-dateutil==2.8.2
 python-decouple==3.8
 pyttsx3==2.90
@@ -35,8 +51,12 @@ pytz==2023.3.post1
 pywin32==306
 pyzmq==25.1.1
 requests==2.31.0
+requests-oauthlib==1.3.1
 router==0.1
 routers==0.10.1
+rsa==4.9
+scipy==1.11.4
+scoop==0.7.2.0
 Serializer==0.2.1
 serializers==0.2.4
 simplejson==3.19.2
@@ -44,7 +64,10 @@ six==1.16.0
 soupsieve==2.5
 sqlparse==0.4.4
 toml==0.10.2
+typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.1.0
 virtualenv==20.24.7
+virtualenv-clone==0.5.7
 wget==3.2
+yarl==1.9.3
