--- a/Pipfile
+++ b/Pipfile
@@ -6,53 +6,24 @@ name = "pypi"
 [packages]
 
 asgiref==3.7.2
-beautifulsoup4==4.12.2
-certifi==2023.11.17
-charset-normalizer==3.3.2
-comtypes==1.2.0
-distlib==0.3.7
 Django==4.2.7
+django-appconf==1.0.6
 django-bootstrap4==23.2
+django-cors-headers==4.3.1
 django-filter==23.4
+django-google-maps==0.13.0
+django-html==0.1.0
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
-filelock==3.13.1
-future==0.18.3
+djangorestframework-gis==1.0
 gunicorn==21.2.0
-idna==3.6
-numpy==1.26.2
-packaging==23.2
-pandas==2.1.3
-pathlib==1.0.1
+sqlparse==0.4.4
+tzdata==2023.3
 Pillow==10.1.0
-pip==23.3.1
 pipenv==2023.11.15
 pipfile==0.0.2
-platformdirs==4.0.0
-pyarrow==14.0.1
-PyAudio==0.2.14
-pylance==0.8.17
-pypiwin32==223
-python-dateutil==2.8.2
-python-decouple==3.8
-pyttsx3==2.90
-pytz==2023.3.post1
-pywin32==306
-pyzmq==25.1.1
-requests==2.31.0
-router==0.1
-routers==0.10.1
-Serializer==0.2.1
-serializers==0.2.4
-simplejson==3.19.2
-six==1.16.0
-soupsieve==2.5
-sqlparse==0.4.4
-toml==0.10.2
-tzdata==2023.3
-urllib3==2.1.0
 virtualenv==20.24.7
-wget==3.2
+virtualenv-clone==0.5.7
 
 
 [dev-packages]
