--- a/Pipfile
+++ b/Pipfile
@@ -5,25 +5,31 @@ name = "pypi"
 
 [packages]
 
+apispec==6.3.0
 asgiref==3.7.2
+beautifulsoup4==4.12.2
+bootstrap4==0.1.0
 Django==4.2.7
-django-appconf==1.0.6
 django-bootstrap4==23.2
-django-cors-headers==4.3.1
+django-extensions==3.2.3
 django-filter==23.4
-django-google-maps==0.13.0
-django-html==0.1.0
-django-rest-framework==0.1.0
+django-serializer==1.2.1
+django-slugify-processor==1.5.0
 djangorestframework==3.14.0
-djangorestframework-gis==1.0
+future==0.18.3
 gunicorn==21.2.0
-sqlparse==0.4.4
-tzdata==2023.3
+marshmallow==3.20.1
+packaging==23.2
 Pillow==10.1.0
-pipenv==2023.11.15
-pipfile==0.0.2
-virtualenv==20.24.7
-virtualenv-clone==0.5.7
+python-slugify==8.0.1
+pytz==2023.3.post1
+Serializer==0.2.1
+serializers==0.2.4
+simplejson==3.19.2
+soupsieve==2.5
+sqlparse==0.4.4
+text-unidecode==1.3
+tzdata==2023.3
 
 
 [dev-packages]
